--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,11 @@ environment:
   sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
+  cupertino_icons: null
   flutter:
     sdk: flutter
-
-
-  cupertino_icons:
-  fluttertoast:
-
+  fluttertoast: null
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +22,3 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
