Add build configurations and LLDB integration for Flutter and Toast
- Created new JSON files for build configurations of the Toast and fluttertoast targets, including Debug, Profile, and Release configurations.
- Updated build settings to include necessary parameters such as CODE_SIGN_IDENTITY, SDKROOT, and INFOPLIST_FILE.
- Added new build phases for headers, sources, frameworks, and resources in the respective targets.
- Introduced a new LLDB helper script to handle memory writing for debugging purposes.
- Generated a corresponding LLDB initialization script to import the helper.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   cupertino_icons: null
   flutter:
     sdk: flutter
-  fluttertoast: null
+  fluttertoast: ^8.2.12
   google_fonts: ^6.2.1
 
 dev_dependencies:
